Add submission file download
